--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -106,6 +106,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
+.colorDefault-2K3EoJ.focused-3afm-j {
+    background-color: #728e3d;
+}
+
 
 .wrapper-sa6paO {
     overflow: visible;
@@ -1176,20 +1180,18 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: rgba(0,0,0,0.3);
 }
 
-.scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track,
-.theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece,
-.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-track {
+.auto-Ge5KZx::-webkit-scrollbar-track  {
     background-color: transparent;
     border: none;
 }
 
-.theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
+
+.auto-Ge5KZx::-webkit-scrollbar-thumb {
     background-color: #728e3d;
     border: none;
 }
 
-.scroller-2FKFPG::-webkit-scrollbar {
+.auto-Ge5KZx::-webkit-scrollbar {
     width: 6px;
 }
   
@@ -1573,12 +1575,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 
 
-.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
-.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, 
-.theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
-.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb {
+
+.auto-Ge5KZx::-webkit-scrollbar-thumb {
     background-color: #728e3d;
 }
 
@@ -2219,7 +2217,11 @@ body, div, span, textarea, ::-webkit-input-placeholder {
   /* ---- */
 
 
-
+  .wrapper-3vR61M,
+  .wrapper-1F5TKx {
+    background-color: transparent;
+    overflow: visible;
+  }
 
 
 
@@ -2232,6 +2234,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
   
   .standardSidebarView-3F1I7i a,
+  .imageDetails-1t6Zms a,
   .theme-dark .card-3Qj_Yx a,
   .bda-slist .bda-footer a,
   .content-8biNdB a,
